# sonoro

./: .gitignore  CMakeLists.txt  README.md  sonoro.sln  sonoro.vcxproj  sonoro2.sln  sonoro2.vcxproj
include/: a_weighting.h  asset_loader.h  audio_context.h  bars_scene.h  beat_scene.h  camera.h  circular_array.h  constants.h  framebuffer.h  input.h  input_context.h  line_scene.h  lines.h  math_utils.h  menu.h  model.h  program.h  raw_scene.h  render_context.h  scene.h  shapes.h  sonoro.h  superformula_scene.h  test_scene.h  text_renderer.h  visualizer.h  world_object.h
lib/win-x64/: libsoundio.def
res/: fullscreen.vert  fullscreentex.frag  fullscreentex.vert
resources/: default.frag  default.vert  fullscreen.frag
src/: asset_loader.cpp  bars_scene.cpp  main.cpp  math_utils.cpp  menu.cpp  pa.cpp  sonoro.cpp  test_scene.cpp  visualizer.cpp
src/audio/: audio_context.cpp
src/input/: input_context.cpp
src/render/: camera.cpp  framebuffer.cpp  lines.cpp  model.cpp  program.cpp  render_context.cpp  text_renderer.cpp  world_object.cpp
src/scenes/: bars_scene.cpp  beat_scene.cpp  line_scene.cpp  menu.cpp  raw_scene.cpp  superformula_scene.cpp  test_scene.cpp
